src/assets/styles.css
/* ... */
.mnt_btn_home {
  /* padding: 10px 29px;  */
  border: 0;
  background: #ffffff;
  color: #13D596;
  box-shadow: 0px 3px 6px #00000019;
  border-radius: 4px;
  opacity: 1;
  position: relative;
  top: 0;
  width: 173px;
  height: 40px;
}
.wrd_btn {
  padding: 0;
  border: 0;
  background: #13D596;
  color: #ffffff;
  margin: 0px 0px 0 20px;
  box-shadow: 0px 3px 6px #00000019;
  border-radius: 4px;
  opacity: 1;
  width: 173px;
  position: relative;
  top: 0;
  height: 40px;
}
.main_wrapper.ward_main_wrap {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.ward_left_banner{
  /* background: url('/static/media/ward_sign_in.d939ec68.png'); */
  /* height: 100%; */
  width: 46%;
  /* height: 100%; */
  /* background-position: center;
  background-repeat: no-repeat;
  background-size: cover; */
}
.ward_left_banner img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.inner_left_dashboard .logo {
  margin-bottom: 20px;
}
.ward_sign_wrap {
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  width: 54%;
  /* justify-content: center; */
  position: relative;
  padding: 40px 50px;
}
.inner_wrap {
  position: relative;
}
.ward_input_wrap {
  display: flex;
  padding: 0;
  position: relative;
  justify-content: start;
  width: 100%
}
.ward_heading_wrap {
  position: relative;
  top: 0;
  padding: 20px 0px;
}
.mid-section-dshbrd.mid-section-dshbrd-100vh {
  height: calc(100vh - 52px);
  min-height: calc(100vh - 52px);
}
.wrapper-100vh.main_wrapper{
  height: 100vh;
  min-height: 100vh;
}
.ward_input_wrap span{
  position: absolute;
  color: #979292;
  letter-spacing: 1px;
  font-weight: 600;
  right: 197px;
}
.head_ward_h4 {
  color: #0FBB83;
  font-size: 1.0em;
  font-weight: 600;
  padding: 20px 0;
  letter-spacing: 0.96px;
  line-height: 1.3;
}
.head_ward_h2 {
  font-size: 2.0em;
  font-weight: 600;
  letter-spacing: 0px;
  color: #000;
}
.ward_btn_wrap {
  position: relative;
  margin: 0;
}
.margnTop {
  margin-top: 20px;
}
.ward_bottom {
  position: absolute;
  bottom: 35px;
  /* left: 1px; */
  font-size: 1.0em;
  font-weight: 700;
}
.ward_bottom a {
  font-size: 1em;
  letter-spacing: 0;
  line-height: 1.2;
  font-weight: 600;
  color: #0FBB83;
}
.input_wrap {
  margin-right: 10px;
  width: 50%;
  position: relative;
}
.error-message {
  margin: 5px auto;
  text-align: left;
  font: Italic 16px/16px Roboto;
  letter-spacing: 0;
  color: #f61e04;
  opacity: 1;
}
.input_wrap label {
  letter-spacing: 0px;
  color: #777289;
  font-size: 0.89em;
  line-height: 1.2;
}
.form-control.cstm-input {
  height: 40px !important;
  opacity: 1;
  box-shadow: none;
  -webkit-box-shadow: none;
}
.input_wrap span {
  position: absolute;
  right: 0px;
  top: 3px;
  margin: 0 auto;
  text-align: right;
  font: Italic 0.78em/1.2 Roboto;
  letter-spacing: 0;
  color: #B1B0C1;
  opacity: 1;
}
.input_row {
  display: flex;
  width: 100%;
}
.home_page_img_wrap {
  position: relative;
  width: 20%;
  text-align: center;
  display: block;
  height: auto;
}

.home_page_img_wrap img{
  width: 100%;
}

/* ------ ward-dashboard ----- */
.infusn_nrse_wrap.whiteBG {
  background: #fff;
  border-radius: 10px;
  margin-right: 14px;
  padding: 10px;
}
tr.list_heading_ul.dhabord-ul-heading>td {
  font-size: 14px;
  font-weight: 500;
  font-family: inherit;
  padding: 9px 10px !important;
}
td.active-nurse-frst_child {
  width: 21%;
}
.operation-history.progress>div {
  background: #CECDD8 !important;
}
.device_page_wrap h3 {
  margin: 0px !important;
}
.inner_dshbrd_wrap {
  display: flex;
    flex: 1 auto;
    border-left: 1px solid #bdbcbc;
    border-right: 1px solid #bdbcbc;
}
.wrap_left_section {
  width: 100%;
}
.left_dashboard {
    background: #fff;
    /* float: left; */
    border-right: 1px solid #bdbcbc;
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}
.right_dashboard{
  display: flex;
  width: 96%;
  height: 100%;
  background: #fff;
  flex-direction: column;
}
.header_dash {
  display: flex;
  /* padding: 10px; */
  justify-content: space-between;
  border-bottom: 1px solid #bdbcbc;
  position: relative;
  height: 52px;
  align-items: center;
}
.header_right_dash {
  width: 45%;
  position: relative;
}
.header_right_dash img {
  width: 22%;
}
.logo_hedng {
  font-size: 1.5em;
  padding: 11px 0;
  letter-spacing: 1px;
  font-weight: 600;
  margin: 0 0 0px 0px;
  align-items: center;
  position: relative;
  top: 7px;
}
.ward {
  font-size: 12px;
  text-align: center;
  padding: 5px 15px;
  background: #F0F4FB 0% 0% no-repeat padding-box;
  border-radius: 13px;
  font-weight: 500;
  right: 5px;
  position: relative;
  color: #1D474B;
}
.header_left_dash {
  position: relative;
  right: 100px;
  top: 2px;
  font-size: 12px;
  letter-spacing: 0;
  color: #000000;
  opacity: 1;
}
.mid-section-dshbrd {
  background: #F8F9F9;
  float: left;
  height: 100%;
  width: 100%;
  min-height: 695px;
}
.inner_dash {
  padding: 24px 38px;
  height: 100%;
  width: 100%;
  float: left;
}
.right-mid-dash {
  position: relative;
  float: left;
  width: 71%;
  /* background: blue; */
  height: 100%;
}
.left-mid-dash {
  float: left;
  position: relative;
  width: 24%;
  margin-right: 17px;
  /* background: red; */
  height: 100%;
}
.sumry_head {
  padding: 23px 0 37px;
  font-size: 1.2em;
  font-weight: 600;
  letter-spacing: 1px;
}
.con_text {
  font-weight: 500;
  padding-left: 14px;
  color: #B1B0C1;
  /* padding-right: 14px; */
}
.status_img_wrap img {
  margin-left: 14px;
  width: 22px;
  line-height: 22px;
  height: 22px;
}
.infusn_device_wrap .infusn_wrap {
  background: #fff;
  padding: 12px 15px;
  border-radius: 12px;
  width: 48%;
}
.infusn_wrap.device_infusn h5.prcnt_op_txt {
  padding: 8px 0px !important;
}
.sumry_head2{
  font-size: 1.28em;
  font-weight: 600;
  text-align: left;
  letter-spacing: 0;
  color: #000000;
  text-shadow: 0px 3px 6px #0000000B;
  opacity: 1;
}
/* ... */

